--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Portfolio</title>
 </head>
 <body>
-    Hi I am Vinayak!. A developer in the making, i have currently made some CLI apps. Looking forward to learn more about web through Neog. I graduated form SMVITM snd i work at infosys. I have hostel life experience of 11 years and i follow cricket a lot.     
+    Hi I am Vinayak!. A developer in the making, i have currently made some CLI apps. Looking forward to learn more about web through Neog. I graduated form SMVITM snd i work at infosys. I have hostel life experience of 11 years and i follow cricket a lot.
+    my current interests include web apps,fitness.     
 </body>
 </html>
